objects/tffa__PurchaseProperty__c.object
<CustomObject>
    <description>Details of purchase property involved in this application</description>
    <fields>
        <fullName>tffa__AdditionalFeatures__c</fullName>
        <description>Describing features in or around the building, and their corresponding size in sq ft.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Additional features</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tffa__Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Captures address of the property being purchased</description>
        <label>Address</label>
        <referenceTo>tffa__Address__c</referenceTo>
        <relationshipLabel>Purchase Properties</relationshipLabel>
        <relationshipName>PurchaseProperties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__AgeOfConstruction__c</fullName>
        <description>Indicates age in years of the real estate to be purchased by party</description>
        <label>Age of construction</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__AgreementValue__c</fullName>
        <description>Total agreement value of real estate asset</description>
        <label>Agreement value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__Application__c</fullName>
        <description>Reference to parent application object</description>
        <label>Application</label>
        <referenceTo>tffa__Application__c</referenceTo>
        <relationshipLabel>Properties</relationshipLabel>
        <relationshipName>PurchaseProperties</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>tffa__CommercialDesignatorType__c</fullName>
        <description>A value from a MISMO prescribed list that specifies a further level of detail for a street address, for example, Suite or Unit. Captured for Commercial property.</description>
        <label>Commercial designator type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__CommercialPropertyDesignatorType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__CommercialUsageType__c</fullName>
        <description>Specifies the intended usage of the property by the borrower.</description>
        <label>Commercial usage type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__CommercialOccupancyType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__CommunityPropertyType__c</fullName>
        <description>Captures details about community property state</description>
        <label>Community property type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__CommunityPropertyType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__ConstructionClosingType__c</fullName>
        <description>A value from a MISMO prescribed list that specifies the type of closing process for the construction-to-permanent loan.</description>
        <label>Construction closing type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__ConstructionClosingType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__ConstructionImprovementAmount__c</fullName>
        <description>The total cost amount of additions to raw land that normally increase its value (i.e., the building) as part of a construction loan.</description>
        <label>Construction improvement amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__CreditLimit__c</fullName>
        <description>The maximum dollar amount of credit available to the borrower on a Home Equity Line of Credit (HELOC) regardless of whether the borrower has accessed the amount.</description>
        <label>Credit limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__DesignatorType__c</fullName>
        <description>A value from a MISMO prescribed list that specifies a further level of detail for a street address, for example, Suite or Unit. This list is based on the USPS Publication 28 on Postal Addressing Standards with the addition of Condo based on mortgage industry need.</description>
        <label>Designator type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__PropertyDesignatorType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__DispositionStatusType__c</fullName>
        <description>A value from a MISMO prescribed list that specifies the intended disposition of an owned real property.</description>
        <label>Disposition status type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__DispositionStatusType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__DownPayment__c</fullName>
        <description>Down payment amount to be paid while purchasing the property</description>
        <label>Down payment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__EnergyImprovementIndicator__c</fullName>
        <description>Options for energy-related improvements program</description>
        <label>Energy improvement indicator</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__EnergyImprovementIndicator</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__EstimatedValue__c</fullName>
        <description>Estimated valuation of the property</description>
        <label>Estimated value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__ExistingMortgage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates existing mortgage on the property</description>
        <label>Existing mortgage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__ExternalReferenceId__c</fullName>
        <description>The reference ID of the property from external system which has provided property details result.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>External reference id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__FHASecondaryResidenceIndicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When true, indicates that the property usage falls under the FHA Secondary Residence policy and guidelines.</description>
        <label>Fhasecondary residence indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__FinancialInstitution__c</fullName>
        <description>Name of the financial institution in which existing mortgage account is held</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Financial institution</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__FullName__c</fullName>
        <description>The unparsed name of either an individual or a legal entity.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Full name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__HousingExpenseType__c</fullName>
        <description>A value from a MISMO prescribed list that specifies the housing expense items listed in a mortgage loan transaction</description>
        <label>Housing expense type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__HousingExpenseType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__LandOriginalAmount__c</fullName>
        <description>The original cost of acquiring the land on which the home will be built. This is used for purchase, construction and refinance loans.</description>
        <label>Land original amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__LandTenureType__c</fullName>
        <description>A value from a MISMO prescribed list that categorizes the legal means by which Native American land may be owned.</description>
        <label>Land tenure type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__LandTenureType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__LeaseExpirationDate__c</fullName>
        <description>The final expiration date of the ground lease.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Lease expiration date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>tffa__ManufacturedHomeIndicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Describes the construction process for the main dwelling unit of the subject property.</description>
        <label>Manufactured home indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__MarketValue__c</fullName>
        <description>Total amount of market value of the current real estate</description>
        <label>Market value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__MixedUsageIndicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When true, indicates the subject property includes commercial space set aside to operate a business.</description>
        <label>Mixed usage indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__MonthlyHousingExpense__c</fullName>
        <description>The total monthly amount for insurance, property taxes, association dues and other housing expenses on the owned real property.</description>
        <label>Monthly housing expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__MonthlyInsurance__c</fullName>
        <description>Monthly insurance amount to be paid for the property</description>
        <label>Monthly insurance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__MonthlyRentalIncome__c</fullName>
        <description>Monthly rental income from the property</description>
        <label>Monthly rental income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__MonthlyTax__c</fullName>
        <description>Monthly tax amount to be paid for the property</description>
        <label>Monthly tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__MonthlyUtilityExpense__c</fullName>
        <description>Monthly expenses towards utility bills</description>
        <label>Monthly utility expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__MortgageAmount__c</fullName>
        <description>Total mortgage amount on existing real estate asset</description>
        <label>Mortgage amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__NetRentalIncome__c</fullName>
        <description>Net rental income from the current real estate</description>
        <label>Net rental income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__NumberOfBaths__c</fullName>
        <description>Number of bathrooms in the property</description>
        <label>Number of baths</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__NumberOfBeds__c</fullName>
        <description>Number of bedrooms in the property</description>
        <label>Number of beds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__NumberOfFloors__c</fullName>
        <description>Number of floors/stories in the property</description>
        <label>Number of floors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__NumberOfMortgages__c</fullName>
        <description>Number of existing mortgages of real estate asset</description>
        <label>Number of mortgages</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__NumberOfRooms__c</fullName>
        <description>Number of rooms in the property</description>
        <label>Number of rooms</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__NumberOfUnits__c</fullName>
        <description>The number of individual family dwelling units being financed in the subject property.</description>
        <label>Number of units</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__NumberOfUnits</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__OccupancyPercentage__c</fullName>
        <description>The percentage of the rentable area of such Property occupied by bona fide tenants of such Property or leased by tenants pursuant to bona fide tenant Leases.</description>
        <label>Occupancy percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__OccupancyStatus__c</fullName>
        <description>Specifies the intended usage of the property by the borrower.</description>
        <label>Occupancy status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__OccupancyType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__One__c</fullName>
        <description>Power of One, Useful for reporting</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Power of One, Useful for reporting</inlineHelpText>
        <label>One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__ProjectLegalStructureType__c</fullName>
        <description>List that specifies the form of ownership of a project. The Project Legal Structure Type defines the quality and quantity of project ownership and rights accruing to the individual unit owner.</description>
        <label>Project legal structure type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__ProjectLegalStructureType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__PropertyAcquiredDate__c</fullName>
        <description>The date the property was acquired.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Property acquired date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>tffa__PropertyEstateType__c</fullName>
        <description>A value from a MISMO prescribed list that specifies the ownership interest in the property.</description>
        <label>Property estate type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__PropertyEstateType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__PurchasePrice__c</fullName>
        <description>Purchase price of the land/unit. Used for purchase, construction, refinance loans.</description>
        <label>Purchase price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__RelationshipVestingType__c</fullName>
        <description>A value from a MISMO prescribed list that specifies a type of real property ownership by one or more parties. This defines the rights of the parties to occupy, sell their interest in the property to others, to will the property, or to sever joint ownership of the property.</description>
        <label>Relationship vesting type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__RelationshipVestingType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__SearchTimeline__c</fullName>
        <description>Expected timeline for finalizing property to purchase</description>
        <label>Search timeline</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__PropertySearchTimeline</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__SearchType__c</fullName>
        <description>Describes the applicant&apos;s search stage of property selection for applying mortgage</description>
        <label>Search type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__PropertySearchType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__SortOrder__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Controls the relative order of the item in a list.</description>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__Source__c</fullName>
        <description>The source/provider for this asset if it sourced from a external system.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__TitleHolderName__c</fullName>
        <description>The unparsed name of either an individual or a legal entity.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Title holder name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__TitleType__c</fullName>
        <description>Specifies how the borrower held title to the property.</description>
        <label>Title type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__PropertyTitleType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__TotalArea__c</fullName>
        <description>Total livable square footage of the structure.</description>
        <label>Total area</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__TotalDues__c</fullName>
        <description>Total dues pending against the property</description>
        <label>Total dues</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__TransactionType__c</fullName>
        <description>Types of the subject mortgage transaction</description>
        <label>Transaction type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__MortgageTransactionType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__TrustClassificationType__c</fullName>
        <description>A value from a MISMO prescribed list that categorizes a trust.</description>
        <label>Trust classification type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__TrustClassificationType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__Type__c</fullName>
        <description>Indicates property type being purchased. Values are SINGLE_FAMILY_RESIDENCE, MULTI_FAMILY_RESIDENCE, DETACHED</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__PropertyType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__UsageType__c</fullName>
        <description>Specifies the intended usage of the property by the borrower.</description>
        <label>Usage type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__PropertyUsageType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__UsedAsCollateral__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the current asset is used as collateral in lending application</description>
        <label>Used as collateral</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__ValuationAmount__c</fullName>
        <description>Statement of value of the property from a valid property valuation source.</description>
        <label>Valuation amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__ValuationSource__c</fullName>
        <description>Valid property valuation source.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Valuation source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Purchase Property</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>PurchaseProperty Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PurchaseProperties</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>